<resources>
    <string name="app_name">Weather</string>
    <string name="txt_city_hint">Ex. Pasto, CO</string>
    <string name="btn_text_search">Search city</string>
    <string name="lbl_current">Current:</string>
    <string name="lbl_min">Min:</string>
    <string name="lbl_max">Max:</string>
    <string name="lbl_weather">Weather:</string>
    <string name="lbl_current_hint">Current weather</string>
    <string name="lbl_min_hint">Min weather</string>
    <string name="lbl_max_hint">Max weather</string>
    <string name="lbl_weather_hint">Here Weather val</string>
    <string name="btn_text_gomaps">Go to google maps</string>
    <string name="lbl_ite_help">Help</string>
</resources>
